<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_show"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:fontFamily="@font/ds"
                        android:textColor="@color/white_to_black"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/ic_baseline_content_copy_24"
                        app:layout_constraintBottom_toTopOf="@+id/edit_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <View
                android:id="@+id/v1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/white_to_black"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_all"
                app:layout_constraintEnd_toStartOf="@id/text_view_all"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/card_show"                />


            <TextView
                android:id="@+id/text_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ds"
                android:text="@string/edit"
                android:textColor="@color/white_to_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_show" />

            <View
                android:id="@+id/v2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/white_to_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/text_view_all"
                app:layout_constraintStart_toEndOf="@id/text_view_all"
                app:layout_constraintTop_toBottomOf="@id/card_show"                />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_all">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/replies_text_before"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:fontFamily="@font/ds"
                        android:hint="@string/enter_word_before"
                        android:textColor="@color/white_to_black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toStartOf="@+id/replies_text_new"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/replies_text_new"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:fontFamily="@font/ds"
                        android:hint="@string/enter_word_new"
                        android:textColor="@color/white_to_black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/replies_text_before"
                        app:layout_constraintTop_toTopOf="parent" />

                    <info.hoang8f.widget.FButton
                        android:id="@+id/edit_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginVertical="@dimen/_25sdp"
                        android:backgroundTint="@color/back_ground_f_button"
                        android:fontFamily="@font/bj"
                        android:text="@string/replies"
                        android:textColor="@color/just_white"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/replies_text_new" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_edit">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="@dimen/_15sdp"
                        android:spinnerMode="dialog" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_spinner">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <EditText
                        android:id="@+id/change_spase"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:fontFamily="@font/ds"
                        android:hint="@string/enter_change_space_to"
                        android:textColor="@color/white_to_black"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <info.hoang8f.widget.FButton
                        android:id="@+id/change_btn_space"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginVertical="@dimen/_25sdp"
                        android:backgroundTint="@color/back_ground_f_button"
                        android:fontFamily="@font/bj"
                        android:text="@string/replies"
                        android:textColor="@color/just_white"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/change_spase" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>